--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -29,6 +29,27 @@ jobs:
     uses: ./.github/workflows/create_certs.yml
     secrets: inherit
 
+          # The lines below add the customizations listed using the CustomizationSelect script
+          # The "\" is a continuation character 
+          #   the line following a "\" should not be blank
+          /bin/bash -c "$(curl -fsSL \
+          https://raw.githubusercontent.com/loopandlearn/lnl-scripts/main/CustomizationSelect.sh)" \
+          low_carb_limit \
+          now_line \
+          lnl_icon \
+          watch_title \
+          2hlollipop \
+          meal_days \
+          meal_week \
+          profiles \
+          basal_lock \
+          live_activity \
+          negative_insulin \
+          remote_window
+
+          # the final customization listed above CANNOT have a continuation character
+          # more customizations can be pasted after this line
+
   # Checks if GH_PAT holds workflow permissions
   # Checks for existence of alive branch; if non-existent creates it
   check_alive_and_permissions:
